--- a/src/pages/coding-programs/classes/python-vs-java/index.astro
+++ b/src/pages/coding-programs/classes/python-vs-java/index.astro
@@ -2,36 +2,9 @@
 import BaseLayout from '../../../../layouts/BaseLayout.astro';
 import SectionHeader from '../../../../components/SectionHeader.astro';
 import CalloutCard from '../../../../components/ui/CalloutCard.astro';
+import { siteConfig } from '../../../../config/site';
 
-const reasons = [
-  'Students on FIRST robotics teams',
-  'Learners preparing for AP Computer Science A independently',
-  'Students looking for a new challenge',
-  'High school juniors and seniors who want a head start on college CS classes',
-];
-
-const languageCards = [
-  {
-    title: 'Java Classes',
-    image: {
-      src: 'https://www.jointheleague.org/wp-content/uploads/2021/09/java.png',
-      alt: 'Java program illustration',
-    },
-    href: '/coding-programs/classes/java/',
-    cta: 'Enroll in a Java Class',
-  },
-  {
-    title: 'Python Classes',
-    image: {
-      src: 'https://www.jointheleague.org/wp-content/uploads/2021/09/python.png',
-      alt: 'Python program illustration',
-    },
-    href: '/coding-programs/classes/python/',
-    cta: 'Enroll in a Python Class',
-  },
-];
-
-const address = '12625 High Bluff Dr #113, San Diego, CA 92130';
+const address = siteConfig.cv_classroom_address;
 ---
 
 <BaseLayout
@@ -55,9 +28,10 @@ const address = '12625 High Bluff Dr #113, San Diego, CA 92130';
         </p>
         <p><strong>Students who might start directly with Java include:</strong></p>
         <ul class="hero__list">
-          {reasons.map((reason) => (
-            <li>{reason}</li>
-          ))}
+          <li>Students on FIRST robotics teams</li>
+          <li>Learners preparing for AP Computer Science A independently</li>
+          <li>Students looking for a new challenge</li>
+          <li>High school juniors and seniors who want a head start on college CS classes</li>
         </ul>
         <p>
           No matter where students begin, the fundamentals carry across languages and careers. Professional developers
@@ -101,14 +75,18 @@ const address = '12625 High Bluff Dr #113, San Diego, CA 92130';
         description="Ready to get started? Explore the Python and Java tracks to find the perfect fit."
       />
       <div class="grid grid--two language-grid">
-        {languageCards.map((card) => (
-          <CalloutCard class="language-card" title={card.title}>
-            <figure slot="media" class="language-card__media">
-              <img src={card.image.src} alt={card.image.alt} loading="lazy" />
-            </figure>
-            <a class="button button--primary" href={card.href}>{card.cta}</a>
-          </CalloutCard>
-        ))}
+        <CalloutCard class="language-card" title="Java Classes">
+          <figure slot="media" class="language-card__media">
+            <img src="https://www.jointheleague.org/wp-content/uploads/2021/09/java.png" alt="Java program illustration" loading="lazy" />
+          </figure>
+          <a class="button button--primary" href="/coding-programs/classes/java/">Enroll in a Java Class</a>
+        </CalloutCard>
+        <CalloutCard class="language-card" title="Python Classes">
+          <figure slot="media" class="language-card__media">
+            <img src="https://www.jointheleague.org/wp-content/uploads/2021/09/python.png" alt="Python program illustration" loading="lazy" />
+          </figure>
+          <a class="button button--primary" href="/coding-programs/classes/python/">Enroll in a Python Class</a>
+        </CalloutCard>
       </div>
     </div>
   </section>
