--- a/src/components/sections/about/ImpactHighlights.astro
+++ b/src/components/sections/about/ImpactHighlights.astro
@@ -3,7 +3,7 @@ import SectionHeader from '../../SectionHeader.astro';
 import { impactHighlights } from '../../../data/about';
 ---
 
-<section class="section">
+<section class="section impact">
   <div class="container">
     <SectionHeader title="Impact Highlights" description="From awareness to career readiness, we pair real-world curriculum with mentorship so students can translate coding skills into futures they love." />
     <div class="impact__grid">
