--- a/src/pages/programs/classes/python-vs-java/index.astro
+++ b/src/pages/programs/classes/python-vs-java/index.astro
@@ -79,13 +79,13 @@ const address = siteConfig.cv_classroom_address;
           <figure slot="media" class="language-card__media">
             <img src="https://www.jointheleague.org/wp-content/uploads/2021/09/java.png" alt="Java program illustration" loading="lazy" />
           </figure>
-          <a class="button button--primary" href="/coding-programs/classes/java/">Enroll in a Java Class</a>
+          <a class="button button--primary" href="/programs/classes/java/">Enroll in a Java Class</a>
         </CalloutCard>
         <CalloutCard class="language-card" title="Python Classes">
           <figure slot="media" class="language-card__media">
             <img src="https://www.jointheleague.org/wp-content/uploads/2021/09/python.png" alt="Python program illustration" loading="lazy" />
           </figure>
-          <a class="button button--primary" href="/coding-programs/classes/python/">Enroll in a Python Class</a>
+          <a class="button button--primary" href="/programs/classes/python/">Enroll in a Python Class</a>
         </CalloutCard>
       </div>
     </div>
