--- a/src/pages/camps/summer-camps-2024/index.astro
+++ b/src/pages/camps/summer-camps-2024/index.astro
@@ -1,10 +1,10 @@
 ---
-import BaseLayout from '../../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../../components/SectionHeader.astro';
-import CalloutCard from '../../../../components/ui/CalloutCard.astro';
-import CampSessionCard from '../../../../components/ui/CampSessionCard.astro';
-import { campResources, campContact } from '../../../../data/codingCamps';
-import { summer2024Hero, featuredCamps, campTips, partnershipHighlight } from '../../../../data/summer2024';
+import BaseLayout from '../../../layouts/BaseLayout.astro';
+import SectionHeader from '../../../components/SectionHeader.astro';
+import CalloutCard from '../../../components/ui/CalloutCard.astro';
+import CampSessionCard from '../../../components/ui/CampSessionCard.astro';
+import { campResources, campContact } from '../../../data/codingCamps';
+import { summer2024Hero, featuredCamps, campTips, partnershipHighlight } from '../../../data/summer2024';
 
 const phoneHref = campContact.phone.replace(/[^0-9]/g, '');
 ---
